<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Healthcare</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="title_activity_login">Time to log in !</string>
    <string name="title_activity_scan">ScanActivity</string>
    <string name="get_started">Slide me to start !</string>
    <string name="welcome_text">Welcome !</string>
    <string name="email"> you@example.com </string>
    <string name="password"> Password </string>
    <string name="log_in"> Login </string>
    <string name="forgot_password"><u> Forgot your password ? </u></string>
    <string name="start_scan">Slide me to scan</string>
    <string name="designation">Designation : </string>
    <string name="protocol">Protocol : </string>
    <string name="pending_actions">Today\'s assessments </string>
    <string name="title_activity_display">DisplayActivity</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="day">Day</string>
    <string name="question">Question</string>
    <string name="send_data">Save</string>
    <string name="title_activity_date_pick">DatePickActivity</string>
    <string name="my_calendar">Get my calendar</string>
    
     <string name="short_day_mon">Mon</string>
    <string name="short_day_tue">Tue</string>
    <string name="short_day_wed">Wed</string>
    <string name="short_day_thu">Thu</string>
    <string name="short_day_fri">Fri</string>
    <string name="short_day_sat">Sat</string>
    <string name="short_day_sun">Sun</string>
    <string name="day_mon">Monday</string>
    <string name="day_tue">Tuesday</string>
    <string name="day_wed">Wednesday</string>
    <string name="day_thu">Thursday</string>
    <string name="day_fri">Friday</string>
    <string name="day_sat">Saturday</string>
    <string name="day_sun">Sunday</string>
    <string name="short_month_jan">jan.</string>
    <string name="short_month_feb">feb.</string>
    <string name="short_month_mar">mar.</string>
    <string name="short_month_apr">apr.</string>
    <string name="short_month_may">may</string>
    <string name="short_month_jun">jun.</string>
    <string name="short_month_jul">jul.</string>
    <string name="short_month_aug">aug.</string>
    <string name="short_month_sep">sep.</string>
    <string name="short_month_oct">oct.</string>
    <string name="short_month_nov">nov.</string>
    <string name="short_month_dec">dec.</string>
    <string name="month_jan">january</string>
    <string name="month_feb">february</string>
    <string name="month_mar">march</string>
    <string name="month_apr">april</string>
    <string name="month_may">may</string>
    <string name="month_jun">june</string>
    <string name="month_jul">july</string>
    <string name="month_aug">august</string>
    <string name="month_sep">september</string>
    <string name="month_oct">october</string>
    <string name="month_nov">november</string>
    <string name="month_dec">december</string>

</resources>
