<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:mySwitch="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity" >

     <EditText
         android:id="@+id/promptEmail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="50dp"
         android:layout_toLeftOf="@+id/setAccountName"
         android:background="@color/$inputBack"
         android:ems="10"
         android:hint="@string/email"
         android:inputType="textCapWords"
         android:maxLines="1"
         android:padding="8dp"
         android:singleLine="true"
         android:textColor="@color/$inputText"
         android:textColorHint="@color/$inputText"
         android:textSize="13sp" />
     
      <EditText
          android:id="@+id/promptPassword"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_below="@id/promptEmail"
          android:layout_centerHorizontal="true"
          android:layout_marginTop="20dp"
          android:layout_toLeftOf="@+id/setAccountName"
          android:background="@color/$inputBack"
          android:ems="10"
          android:hint="@string/password"
          android:inputType="textCapWords"
          android:maxLines="1"
          android:padding="8dp"
          android:singleLine="true"
          android:textColor="@color/$inputText"
          android:textColorHint="@color/$inputText"
          android:textSize="13sp" />
      
      <com.appscumen.example.MySwitch
            android:id="@+id/logInButton"
            style="@style/mySwitchStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
          	android:layout_below="@id/promptPassword"
            android:layout_marginTop="30dp"
            android:layout_centerHorizontal="true"
            android:gravity="right"
            mySwitch:switchTextAppearanceAttrib="@style/mySwitchTextWhiteAppearance"
            mySwitch:textOff=" "
            mySwitch:textOn="@string/log_in"
            mySwitch:textOnThumb="false"
            mySwitch:thumb="@drawable/welcome_start_white"
            mySwitch:track="@drawable/slider_red" />  
            
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignParentRight="true"
          android:layout_below="@id/logInButton"
          android:text="@string/forgot_password"
          android:textColor="@color/$blue" />

</RelativeLayout>
